--- a/style.css
+++ b/style.css
@@ -181,3 +181,144 @@
   }
   
   
+  .font-press {
+    font-family: 'Playfair Display', serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    font-size: 35px;
+  }
+
+
+  .font-world {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 50px;
+  }
+
+  .font-help {
+    font-family: 'Playfair Display', serif;
+    font-size: 50px;
+  }
+
+  @media (max-width: 768px) {
+    .container {
+      flex-direction: column !important;
+    }
+  }
+
+  .guarantee-section {
+    height: 800px;
+  }
+
+  @media (max-width: 768px) {
+    .guarantee-section {
+      height: auto;
+    }
+
+    .guarantee-section .col-md-6 {
+      height: auto !important;
+    }
+
+    .guarantee-section img {
+      height: auto !important;
+    }
+  }
+
+  .texto-seccion {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-family: 'Objectivity', sans-serif;
+    color: #0E0E0E;
+  }
+  
+  .titulo-principal {
+    font-size: 48px;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-family: 'Objectivity', sans-serif;
+    color: #0E0E0E;
+  }
+  
+  .tarjeta-opinion {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    box-shadow: 0 1px 6px rgba(0,0,0,0.1);
+    border-radius: 4px;
+    padding: 20px;
+    width: 100%;
+    max-width: 530px;
+    height: 330px;
+    font-family: 'Objectivity', sans-serif;
+  }
+  
+  .estrellas {
+    font-size: 18px;
+    color: #000;
+    font-weight: bold;
+  }
+  
+  .fecha {
+    font-size: 12px;
+    color: #333;
+  }
+  
+  .texto-opinion {
+    font-size: 14px;
+    color: #333;
+  }
+  
+  .nombre-persona {
+    font-weight: 600;
+    font-size: 14px;
+  }
+  
+  .boton-reviews {
+    padding: 10px 24px;
+    background: linear-gradient(0deg, #F7C906 0%, #F7DF7C 100%);
+    box-shadow: 0px 4px 5px rgba(14, 14, 14, 0.10);
+    outline: 1px solid #0E0E0E;
+    outline-offset: -1px;
+    color: #0E0E0E;
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 600;
+    border: none;
+  }
+  
+
+  .hero-banner {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-image: url('img/tu-imagen.png');
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+  }
+  
+  .hero-banner::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4); /* sombreado suave */
+    z-index: 0;
+  }
+  
+  .hero-banner .container {
+    position: relative;
+    z-index: 1;
+  }
+  
+  /* Para hacerla responsive */
+  @media (max-width: 768px) {
+    .hero-banner {
+      height: 350px;
+    }
+  
+    .hero-banner h1 {
+      font-size: 1.5rem;
+    }
+  }
+  
